--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="projects.html">Projects</a></li>
 							<li><a href="photos.html">Photography</a></li>
 							<li><a href="about.html">About Me</a></li>
 						</ul>
@@ -46,15 +45,18 @@
 							<header>
 								<h1 class="align-center">Andreea Cristina Tudor</h1>
 
+								<!--
 								<p>Creative content creator with a thorough understanding of the production process and a keen interest in pre-production as well as post-production. Having under my belt at least three years experience in making short films, promotional videos, documentaries as well as work experience at a TV channel, the areas I specialise in are: organisation (1st Assistant Director, Producer), camera operating and offline editing. I am seeking an entry level position in any of those roles as part of a diverse, challenging, fast-paced environment where I can meet other like-minded people with whom I can share the passion for creation as well as further develop my skills.</p>
+								-->
 
 								<div style="padding:40% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/337851969?title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
 							</header>
 
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Traction: The Salford Racing Society</h2>
@@ -66,7 +68,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Exit: 109</h2>
@@ -77,29 +79,29 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/1759.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Pine Box by the bedside</h2>
 										<div class="content">
-											<p>Drama Short film depicting the life of a single mother/nurse (2019)</p>
+											<p>Drama short film depicting a day in the life of a single mother/nurse (2019)</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
-										<h2>Make or break-up</h2>
+										<h2>Make or break up</h2>
 										<div class="content">
-											<p>Raindance Competition Short film (2019)</p>
+											<p>Raindance Competition Short video (2019)</p>
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Agro TV</h2>
@@ -108,20 +110,20 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
-										<h2>Top of the Pots</h2>
+										<h2>Top of the Pot: Live sessions</h2>
 										<div class="content">
 											<p>Live music event, Promotional Video (2018)</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Keeping it Reel</h2>
@@ -131,9 +133,9 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>This thing of darkness</h2>
@@ -142,9 +144,9 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt=""/>
 									</span>
 									<a href="#">
 										<h2>IEC Abroad University Fair</h2>
@@ -155,7 +157,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Chinese New Year</h2>
@@ -164,9 +166,9 @@
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Molly H. Make-up Artist</h2>
@@ -175,12 +177,12 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
+										<img src="images/IMG_3908.jpg" alt="" />
 									</span>
 									<a href="#">
-										<h2>Screaming Beasts - Despair</h2>
+										<h2>Screaming Beasts Despair</h2>
 										<div class="content">
 											<p>Indie Rock band music video (2017)</p>
 										</div>
@@ -196,18 +198,18 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://twitter.com/ac_tudor" class="icon brands  fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://instagram.com/andreea.poco" class="icon brands  fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://vimeo.com/actudor" class="icon brands  fa-vimeo"><span class="label">Vimeo</span></a></li>
+									<li><a href="https://linkedin.com/in/andreea-tudor" class="icon brands  fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="tel:+447397301355" class="icon solid  fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:andreea.tudor@pm.me" class="icon solid  fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://actudor.com/cv/cv.pdf" class="icon solid  fa-file"><span class="label">Resume</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2019 Andreea Cristina Tudor. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li> Maintained by: Alexandru-Paul Copil </li> <!-- https://cpl.li -->
 							</ul>
 						</div>
 					</footer>
