Add images thumbnails

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/traction/Traction%2010.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Traction: The Salford Racing Society</h2>
@@ -68,7 +68,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/exit/Exit%201.png" alt="" />
 									</span>
 									<a href="#">
 										<h2>Exit: 109</h2>
@@ -79,7 +79,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/1759.jpg" alt="" />
+										<img src="images/pine/Pine%20Box%206.JPG" alt="" />
 									</span>
 									<a href="#">
 										<h2>Pine Box by the bedside</h2>
@@ -90,7 +90,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/makeobu/Office%20-%20Make%20or%20break%20up.png" alt="" />
 									</span>
 									<a href="#">
 										<h2>Make or break up</h2>
@@ -101,7 +101,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/agrotv/Sheep%20-%20Agrotv.png" alt="" />
 									</span>
 									<a href="#">
 										<h2>Agro TV</h2>
@@ -112,7 +112,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/topofthepot/Microphone%20-%20Top%20of%20the%20Pot.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Top of the Pot: Live sessions</h2>
@@ -123,7 +123,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/reel/Reel%20-%20Keeping%20it%20Reel.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Keeping it Reel</h2>
@@ -135,7 +135,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/ttod/Gun%20-%20TTOD.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>This thing of darkness</h2>
@@ -146,7 +146,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt=""/>
+										<img src="images/iec/Bag%20-%20IEC%20Abroad.jpg" alt=""/>
 									</span>
 									<a href="#">
 										<h2>IEC Abroad University Fair</h2>
@@ -157,7 +157,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/cny/Dragon%20-%20Chinese%20New%20Year.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Chinese New Year</h2>
@@ -168,7 +168,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/molly/Lip%20-%20MH%20make%20up.jpg" alt="" />
 									</span>
 									<a href="#">
 										<h2>Molly H. Make-up Artist</h2>
@@ -179,10 +179,10 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/IMG_3908.jpg" alt="" />
+										<img src="images/beast/Guitar%20-%20Screaming%20Beast.jpg" alt="" />
 									</span>
 									<a href="#">
-										<h2>Screaming Beasts Despair</h2>
+										<h2>Screaming Beast Despair</h2>
 										<div class="content">
 											<p>Indie Rock band music video (2017)</p>
 										</div>
