--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="photos.html">Photography</a></li>
+							<li><a href="photogallery/">Photography</a></li>
 							<li><a href="about.html">About Me</a></li>
 						</ul>
 					</nav>
