Update about me

--- a/about.html
+++ b/about.html
@@ -57,22 +57,25 @@
 
 										<div class="col-12">
 											<p>
-<!--												I have a keen interest in pre-production as well as post-production.-->
-												I am an ambitious filmmaker with a profound understanding of the production process and film making in general. I've got a creative and technical approach to matters, always looking at the problem from different perspectives and finding the best solution.
+												Welcome! I am an ambitious and creative person with a thorough understanding of the film production process and content creation in general. I tend to have a technical and creative approach to matters, combining the two and looking at a problem from different perspectives. Whether being in an office or on the field, I always push myself as well as work with the team to achieve the best results.
 											</p>
 										</div>
 
 										<div class="col-12">
 											<p>
-												<!--												I have a keen interest in pre-production as well as post-production.-->
-												I've got a thorough understanding of important filmmaking roles as well as good knowledge of equipment and software used in the industry. My projects range from promotional videos to short films and I also do photography.
+												I have a good understanding of different filmmaking roles as well as knowledge of equipment and software used within the industry. Having worked on different types of projects throughout the years, I can adapt easily to a given brief or come up with unique ideas. Moreover, I did work experience for a TV programme which helped me get a glimpse of how the media industry is.
 											</p>
 										</div>
 
 										<div class="col-12">
 											<p>
-												<!--												I have a keen interest in pre-production as well as post-production.-->
-												I'm looking for projects to get involved into, work experience to add to my CV and overall meeting other like-minded people with whom I can share the passion for filmmaking. Some exciting personal projects are in the making, with the possibility to be produced during the summer period and the intention to be put into festivals.
+												The areas I specialise in are: organisation (1st Assistant Director, Producer), camera operating/cinematography and offline editing. I am seeking an entry level position in any of those roles as part of a diverse, challenging and fast-paced environment.
+											</p>
+										</div>
+
+										<div class="col-12">
+											<p>
+												Links to my social media and my CV can be found below.
 											</p>
 										</div>
 
@@ -89,45 +92,26 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Follow</h2>
+							<ul class="icons">
+								<li><a href="https://twitter.com/ac_tudor" class="icon brands  fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://instagram.com/andreea.poco" class="icon brands  fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://vimeo.com/actudor" class="icon brands  fa-vimeo"><span class="label">Vimeo</span></a></li>
+								<li><a href="https://linkedin.com/in/andreea-tudor" class="icon brands  fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="tel:+447397301355" class="icon solid  fa-phone"><span class="label">Phone</span></a></li>
+								<li><a href="mailto:andreea.tudor@pm.me" class="icon solid  fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://actudor.com/cv/cv.pdf" class="icon solid  fa-file"><span class="label">Resume</span></a></li>
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; 2019 Andreea Cristina Tudor. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li> Maintained by: Alexandru-Paul Copil </li> <!-- https://cpl.li -->
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
