--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/traction/Traction%2010.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/traction">
 										<h2>Traction: The Salford Racing Society</h2>
 										<i class="fas fa-award"></i>
 										<div class="content">
@@ -70,7 +70,7 @@
 									<span class="image">
 										<img src="images/exit/Exit%201.png" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/exit109">
 										<h2>Exit: 109</h2>
 										<div class="content">
 											<p>Theatre Play Showreel (2019)</p>
@@ -81,7 +81,7 @@
 									<span class="image">
 										<img src="images/pine/Pine%20Box%206.JPG" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/pinebox">
 										<h2>Pine Box by the bedside</h2>
 										<div class="content">
 											<p>Drama short film depicting a day in the life of a single mother/nurse (2019)</p>
@@ -92,7 +92,7 @@
 									<span class="image">
 										<img src="images/makeobu/Office%20-%20Make%20or%20break%20up.png" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/makeorbreakup">
 										<h2>Make or break up</h2>
 										<div class="content">
 											<p>Raindance Competition Short video (2019)</p>
@@ -103,7 +103,7 @@
 									<span class="image">
 										<img src="images/agrotv/Sheep%20-%20Agrotv.png" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/agrotv">
 										<h2>Agro TV</h2>
 										<div class="content">
 											<p>Romanian Lifestyle Montages (2018)</p>
@@ -114,7 +114,7 @@
 									<span class="image">
 										<img src="images/topofthepot/Microphone%20-%20Top%20of%20the%20Pot.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/toppot">
 										<h2>Top of the Pot: Live sessions</h2>
 										<div class="content">
 											<p>Live music event, Promotional Video (2018)</p>
@@ -125,7 +125,7 @@
 									<span class="image">
 										<img src="images/reel/Reel%20-%20Keeping%20it%20Reel.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/reel">
 										<h2>Keeping it Reel</h2>
 										<i class="fas fa-award"></i>
 										<div class="content">
